--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><meta charset="UTF-8"><title>Reklám Lejátszó</title></head>
+  <head><meta charset="UTF-8"><title>Whitelab Health Stations</title></head>
   <body style="margin:0;background:black;">
     <video autoplay loop muted playsinline style="width:100%;height:100vh;object-fit:cover;">
       <source src="https://file-examples.com/storage/fea376ed53682b3f798d0aa/2017/04/file_example_MP4_1920_18MG.mp4" type="video/mp4">
