--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head><meta charset="UTF-8"><title>Whitelab Health Stations</title></head>
   <body style="margin:0;background:black;">
-    <video autoplay loop playsinline style="width:100%;height:100vh;object-fit:cover;">
+    <video autoplay loop muted playsinline style="width:100%;height:100vh;object-fit:cover;">
       <source src="https://whitelabmedia.fra1.digitaloceanspaces.com/Whtelab.mp4" type="video/mp4">
       A böngésződ nem támogatja a videó lejátszást.
     </video>
